--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Heewon Hwang
 
 # Short bio or description (displayed in the header)
-description: Undergraduate Student, Yonsei University
+description: Undergraduate Student, Yonsei School of Business
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar:
