--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Heewon Hwang
 description: Undergraduate Student, Yonsei School of Business
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar:
+avatar: /images/jekyll-logo.jpg
 
 #
 # Flags below are optional
